@@ -13,7 +13,7 @@ baseUrl = Domain[:-1] if Domain.endswith('/') else Domain
 #print baseUrl
 handle = int(sys.argv[1])
 
-ignoreServers = ["goodvideohost"]
+ignoreServers = ["goodvideohost", "openload"]
 downloadsServers = ["vidlockers"]
 
 def searchWs():
@@ -62,7 +62,7 @@ def IndexPage(url):
 		else:
 			url = url + '/page/0'
 	current_page = int(url.split('/')[-1])
-	result = common.OPEN_URL(url)
+	result = common.OPEN_URL(url, referer=baseUrl)
 	block = re.compile('pnation.*?</strong>(.*?)<\/div>',re.I+re.M+re.U+re.S).findall(result)
 	pages = "" if len(block) == 0 else re.compile('<a href=".*?[\/&]page[=]?\/(.*?)">(.*?)</a>',re.I+re.M+re.U+re.S).findall(block[0])
 
@@ -78,7 +78,7 @@ def IndexPage(url):
 
 	for pageIndex in range(10):
 		try:
-			result = common.OPEN_URL(url)
+			result = common.OPEN_URL(url, referer=baseUrl)
 			matches = re.compile('<div class=\"mov\".*? <img src="(.*?)".*?<h3><a href="(.*?)">(.*?)<.*?<p class=\"ic_text\">(.*?)<\/p>',re.I+re.M+re.U+re.S).findall(result)
 			for match in matches:
 				addDir(match[2],'{0}{1}'.format(baseUrl, match[1]), 4, match[0], True, match[3])
@@ -103,13 +103,13 @@ def addDir(name, url, mode, iconimage, isFolder=True, description=''):
 	xbmcplugin.addDirectoryItem(handle=handle,url=u,listitem=liz,isFolder=isFolder)
 
 def GetSeasons(series_num, iconimage, description):
-	result=common.OPEN_URL('{0}/watchmovies/get_seasons/{1}'.format(baseUrl, series_num))
+	result=common.OPEN_URL('{0}/watchmovies/get_seasons/{1}'.format(baseUrl, series_num), referer=baseUrl)
 	matches=re.compile('onclick=\"get_episodes\(\'(.*?)\'\);\">(.*?)<',re.I+re.M+re.U+re.S).findall(result)
 	for season in matches:
 		addDir('{0}  {1}'.format(name, season[1]), '{0}/watchmovies/get_episodes/{1}?seasonid={2}'.format(baseUrl, series_num, season[0]), 3, iconimage, True, description)
 
 def GetEpisodes(url, iconimage, description):
-	result=common.OPEN_URL(url)
+	result=common.OPEN_URL(url, referer=baseUrl)
 	matches=re.compile('onclick=\"get_episode\(\'(.*?)\',\'(.*?)\'\);\">(.*?)<',re.I+re.M+re.U+re.S).findall(result)
 	url=url.replace('get_episodes','get_episode')
 	for episode in matches:
@@ -130,7 +130,7 @@ def SortByQuality(links):
 	return sortedLinks
 
 def LinksPage(url, iconimage, description):
-	result=common.OPEN_URL(url)
+	result=common.OPEN_URL(url, referer=baseUrl)
 	matches=re.compile('<div style="width:540px;padding-top:5px;">(.+?)</div>',re.I+re.M+re.U+re.S).findall(result)
 	if len(matches) == 1:
 		description = matches[0]
@@ -138,11 +138,11 @@ def LinksPage(url, iconimage, description):
 	if len(matches) == 1:
 		addDir('[COLOR green]{0} - טריילר[/COLOR]'.format(name), matches[0], 8, iconimage, False, description)
 	if not 'get_seasons' in result:
-		tabIDs = re.compile('<a href="#(.*?)" data-toggle="tab">(.*?)</a>').findall(result)
-		linksBlock = re.compile('<div class="tab-pane.*?" id="(.*?)">(.*?)</li></ul>',re.I+re.M+re.U+re.S).findall(result)
-		watch=re.compile('<li .+?id="wrapserv"><a href=["\'](.+?)["\'] target.*?src="\/img\/servers\/(.+?).png.+?<div class="span3".+?<b>איכות (.+?)<\/b>.+?[<\/li>|<\/div>]',re.I+re.M+re.U+re.S).findall(linksBlock[0][1])
-		if len(tabIDs) == 2:
-			download=re.compile('<li .+?id="wrapserv"><a href=["\'](.+?)["\'] target.*?src="\/img\/servers\/(.+?).png.+?<div class="span3".+?<b>איכות (.+?)<\/b>.+?[<\/li>|<\/div>]',re.I+re.M+re.U+re.S).findall(linksBlock[1][1])
+		linksBlock = re.compile('<ul class="movie_links"(.*?)</ul>\s*</div>',re.I+re.M+re.U+re.S).findall(result)
+		reg = '<li .*?id="wrapserv"><a href=["\'](.*?)["\'] target.*?src="\/img\/servers\/(.*?).png.*?<div class="span3".*?<b>איכות (.*?)<\/b>.*?[<\/li>|<\/div>]'
+		watch=re.compile(reg,re.I+re.M+re.U+re.S).findall(linksBlock[0])
+		if len(linksBlock) == 2:
+			download=re.compile(reg,re.I+re.M+re.U+re.S).findall(linksBlock[1])
 		else:
 			download = []
 		matches = [w for w in watch if w[1] not in ignoreServers] + [d for d in download if d[1] in downloadsServers]
@@ -199,7 +199,7 @@ def AutoPlayUrl(urls):
 	ok = dialog.ok('OOOPS', 'לא נמצאו מקורות זמינים לניגון')
 
 def PlayTrailer(url):
-	result = common.OPEN_URL(url)
+	result = common.OPEN_URL(url, referer=baseUrl)
 	matches = re.compile('"videoUrl":"(.+?)"',re.I+re.M+re.U+re.S).findall(result)
 	if len(matches) > 0:
 		url = matches[0]
@@ -228,7 +228,7 @@ def Categories():
 	xbmc.executebuiltin('Container.SetViewMode(500)')
 
 def MostInCategory(category):
-	html = common.OPEN_URL(baseUrl)
+	html = common.OPEN_URL(baseUrl, referer=baseUrl)
 	if category == 'MostViewedMovies':
 		startBlock = html.find('הסרטים הנצפים ביותר')
 		endBlock = html.find('עזרו לנו להמשיך להתקיים', startBlock)
