@@ -1,5 +1,6 @@
 # -*- coding: utf-8 -*-
-import urllib, urllib2
+import urllib, urllib2, gzip
+from StringIO import StringIO
 
 UA = "Mozilla/5.0 (Windows; U; Windows NT 5.1; en-GB; rv:1.9.0.3) Gecko/2008092417 Firefox/3.0.3"
 
@@ -11,6 +12,7 @@ def OPEN_URL(url, headers={}, user_data={}, referer=None, Host=None):
 	else:
 		req = urllib2.Request(url)
 	req.add_header('User-Agent', UA)
+	req.add_header('Accept-encoding', 'gzip')
 	for k, v in headers.items():
 		req.add_header(k, v)
 	if referer:
@@ -19,7 +21,12 @@ def OPEN_URL(url, headers={}, user_data={}, referer=None, Host=None):
 		req.add_header('Host' ,Host)
 	try:
 		response = urllib2.urlopen(req,timeout=100)
-		link = response.read()
+		if response.info().get('Content-Encoding') == 'gzip':
+			buf = StringIO( response.read())
+			f = gzip.GzipFile(fileobj=buf)
+			link = f.read()
+		else:
+			link = response.read()
 		response.close()
 	except:
 		return None
